# acestep.cpp

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  ace-qwen3.cpp  buildall.sh  buildcpu.sh  buildcuda.sh  buildtermux.sh  buildvulkan.sh  buildwebui.sh  cond.h  dit.h  format.sh  package-lock.json  qwen3-lm.h  qwen3.h  server.cmd  server.sh  tokenizer.h  update.cmd  update.sh  vae.h
.github/workflows/: ci-build.yml
adapters/: README.md
docs/: ARCHITECTURE.md
examples/: ace-understand.json  ace-understand.sh  client.sh  dit-only-sft.json  dit-only-sft.sh  dit-only.json  dit-only.sh  full-sft.json  full-sft.sh  full.json  full.sh  partial-sft.json  partial-sft.sh  partial.json  partial.sh  server.sh  simple-batch.json  simple-batch.sh  simple-sft.json  simple-sft.sh  simple.cmd  simple.json  simple.sh
src/: adapter-merge.h  audio-io.h  audio-resample.h  backend.h  bpe.h  cond-enc.h  debug.h  dit-graph.h  dit-sampler.h  dit.h  dwt-haar.h  fsq-detok.h  fsq-tok.h  gguf-weights.h  metadata-fsm.h  model-registry.h  model-store.cpp  model-store.h  philox.h  pipeline-lm.cpp  pipeline-lm.h  pipeline-synth-impl.h  pipeline-synth-ops.cpp  pipeline-synth-ops.h  pipeline-synth.cpp  pipeline-synth.h  pipeline-understand.cpp  pipeline-understand.h  prompt.h  qwen3-enc.h  qwen3-lm.h  request.cpp  request.h  task-types.h  timer.h  vae-enc.h  vae.h  wav.h  weight-ctx.h
tests/: CMakeLists.txt  debug-detok-cossim.py  debug-dit-cossim.py  debug-dit-cossim.sh  debug-lm-logits.py  debug-lm-logits.sh  debug-tok-cossim.py  request0.json  test-lm-prompt.cpp  test-model-store.cpp  test-model-store.sh  test-philox.cpp  test-philox.py
tools/: ace-lm.cpp  ace-qwen3.cpp  ace-server.cpp  ace-synth.cpp  ace-understand.cpp  dit-vae.cpp  mp3-codec.cpp  neural-codec.cpp  quantize.cpp  synth-batch-runner.h  version.cmake
tools/webui/: package-lock.json  vite.config.ts
tools/webui/src/: App.svelte  vite-env.d.ts
tools/webui/src/components/: LogCard.svelte  Menu.svelte  RequestForm.svelte  SongCard.svelte  Waveform.svelte
tools/webui/src/lib/: api.ts  config.ts  db.ts  fields.ts  i18n.svelte.ts  i18n.ts  songName.ts  state.svelte.ts  types.ts
